# DelaunayAndVoronoi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test.in  test1.txt  valgrind-out.txt  valgrind-out1.txt  valgrind-out2.txt
include/: hierarchy.h  triangulation.h
src/: hierarchy.cpp  main.cpp  triangulation.cpp
